--- a/index.css
+++ b/index.css
@@ -15,14 +15,20 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-around;
-
+    flex-direction: column;
+    gap: 30px;
     margin-inline: auto;
     margin-top: 100px;
     padding-block: 50px;
 
     background-color: #1B244A;
     width: 600px;
+    box-shadow: 0 0 10px black;
+}
+
+.score{
+    display: flex;
+    justify-content: space-around;
 }
 
 .scoreboard-col{
@@ -67,4 +73,14 @@ body {
     height: 45px;
     width: 45px;
     cursor: pointer;
+}
+
+#reset-btn{
+    align-self: center;
+    color: #9AABD8;
+    background-color: transparent;
+    border: 1px solid #9AABD8;
+    border-radius: 2px;
+    cursor: pointer;
+    padding: 10px 20px;
 }
